complete first page need responsive

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 </head>
 
 <body>
-
-    <head class="head">
+    <!-- ------------------------------Header Section------------------------------ -->
+    <header class="head">
         <nav class="head-nav">
             <h1 class="head-title">Influencer products</h1>
             <ul class="head-ancor">
@@ -29,10 +29,10 @@
                 <li><a href="#">Products</a></li>
                 <li><a href="#">Sign up</a></li>
                 <li><a href="#">Log In</a></li>
-                <li><a href="#"><i class="fa-regular fa-magnifying-glass"></i></a></li>
+                <li><a href="#"><i class="fa-regular fa-magnifying-glass" id="nav-icon"></i></a></li>
                 <li>
                     <div class="shopping-container">
-                        <a href="#"><i class="fa-regular fa-cart-shopping"></i></a>
+                        <a href="#"><i class="fa-regular fa-cart-shopping" id="nav-icon"></i></a>
                         <div class="black-spot"></div>
                     </div>
                 </li>
@@ -47,15 +47,27 @@
             <div class="journey-left">
                 <h1 class="journey-title">Start your Journey as <br/>Influencer</h1>
                 <p class="journey-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem <br> vestibulum sed scelerisque eros. Lectus faucibus.</p>
-                <a href="#">Preebook now <i class="fa-regular fa-arrow-right"></i></a>
-                <button></button>
+                <!-- <a href="#">Preebook now <i class="fa-regular fa-arrow-right"></i></a> -->
+                <button><span>Preebook now</span><i class="fa-regular fa-arrow-right"></i></button>
             </div>
             <!-- right -->
             <div class="journey-right">
                 <img src="./assets/images/main-camera.png" alt="">
             </div>
         </div>
-    </head>
+
+        <div class="sponsor">
+            <img src="./assets/logos/Alibaba.svg" alt="Alibaba">
+            <img src="./assets/logos/Amazon.svg" alt="Amazon">
+            <img src="./assets/logos/Daraz.pk Logo.svg" alt="Daraz">
+            <img src="./assets/logos/Ebay.svg" alt="Ebay">
+            <img src="./assets/logos/Rakuten.svg" alt="Rakuten">
+            <img src="./assets/logos/Target.svg" alt="Target">
+            <img src="./assets/logos/Walmart.svg" alt="Walmart">
+        </div>
+    </header>
+
+    <!-- ------------------------------Main Section------------------------------ -->
 </body>
 
 </html>
